feat(session): implement session booking flow